# architecture_and_design_patterns_otus

./: .gitignore  main.py  pyproject.toml
.github/workflows/: app.yml
lessons/: abstraction.py  module_tests.py
tests/: test_quadratic_equasion.py  test_spaceship_actions.py
