[project]
name = "architecture-and-design-patterns-otus"
version = "0.1.0"
description = ""
authors = [
    {name = "Vitalii Zagoruiko",email = "v.zagoruiko@arenadata.io"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
